--- a/IronmanSaveBackup/App.config
+++ b/IronmanSaveBackup/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="IronmanSaveBackup.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <userSettings>
+        <IronmanSaveBackup.Properties.Settings>
+            <setting name="BackupLocation" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SaveLocation" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SaveInterval" serializeAs="String">
+                <value>300</value>
+            </setting>
+            <setting name="EnableOnEventBackup" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="KeepBackupNumber" serializeAs="String">
+                <value>10</value>
+            </setting>
+        </IronmanSaveBackup.Properties.Settings>
+    </userSettings>
 </configuration>
