Added warnings, updated UI, and fixed some issues with settings being saved across sessions.

--- a/IronmanSaveBackup/App.config
+++ b/IronmanSaveBackup/App.config
@@ -17,13 +17,19 @@
                 <value />
             </setting>
             <setting name="SaveInterval" serializeAs="String">
-                <value>300</value>
+                <value>5</value>
             </setting>
             <setting name="EnableOnEventBackup" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="KeepBackupNumber" serializeAs="String">
                 <value>10</value>
+            </setting>
+            <setting name="MostRecentCampaign" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="MostRecentVersion" serializeAs="String">
+                <value>0</value>
             </setting>
         </IronmanSaveBackup.Properties.Settings>
     </userSettings>
