--- a/IronmanSaveBackup/Properties/Settings.settings
+++ b/IronmanSaveBackup/Properties/Settings.settings
@@ -9,13 +9,19 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="SaveInterval" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">300</Value>
+      <Value Profile="(Default)">5</Value>
     </Setting>
     <Setting Name="EnableOnEventBackup" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="KeepBackupNumber" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">10</Value>
+    </Setting>
+    <Setting Name="MostRecentCampaign" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="MostRecentVersion" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
