--- a/IronmanSaveBackup/IronmanSaveBackup.csproj
+++ b/IronmanSaveBackup/IronmanSaveBackup.csproj
@@ -56,6 +56,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Backup.cs" />
+    <Compile Include="FolderOperations.cs" />
+    <Compile Include="MessageOperations.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="ValidationRules.cs" />
     <Page Include="MainWindow.xaml">
