Major Overhaul to make process more object oriented and to standardize the messages and errors dispalyed to the user

--- a/IronmanSaveBackup/App.config
+++ b/IronmanSaveBackup/App.config
@@ -10,10 +10,10 @@
     </startup>
     <userSettings>
         <IronmanSaveBackup.Properties.Settings>
-            <setting name="BackupLocation" serializeAs="String">
+            <setting name="BackupParentFolder" serializeAs="String">
                 <value />
             </setting>
-            <setting name="SaveLocation" serializeAs="String">
+            <setting name="SaveParentFolder" serializeAs="String">
                 <value />
             </setting>
             <setting name="SaveInterval" serializeAs="String">
@@ -22,11 +22,14 @@
             <setting name="EnableOnEventBackup" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="KeepBackupNumber" serializeAs="String">
+            <setting name="MaxBackups" serializeAs="String">
                 <value>10</value>
             </setting>
             <setting name="MostRecentCampaign" serializeAs="String">
-                <value>1</value>
+                <value>0</value>
+            </setting>
+            <setting name="LastUpdated" serializeAs="String">
+                <value />
             </setting>
         </IronmanSaveBackup.Properties.Settings>
     </userSettings>
