--- a/IronmanSaveBackup/Properties/Settings.settings
+++ b/IronmanSaveBackup/Properties/Settings.settings
@@ -2,10 +2,10 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="IronmanSaveBackup.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="BackupLocation" Type="System.String" Scope="User">
+    <Setting Name="BackupParentFolder" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="SaveLocation" Type="System.String" Scope="User">
+    <Setting Name="SaveParentFolder" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="SaveInterval" Type="System.Int32" Scope="User">
@@ -14,11 +14,14 @@
     <Setting Name="EnableOnEventBackup" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="KeepBackupNumber" Type="System.Int32" Scope="User">
+    <Setting Name="MaxBackups" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
     <Setting Name="MostRecentCampaign" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">1</Value>
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="LastUpdated" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
