Updating for Chimera Squad

--- a/IronmanSaveBackup/App.config
+++ b/IronmanSaveBackup/App.config
@@ -1,26 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="IronmanSaveBackup.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="IronmanSaveBackup.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <userSettings>
         <IronmanSaveBackup.Properties.Settings>
             <setting name="BackupParentFolder" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SaveParentFolder" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SaveInterval" serializeAs="String">
                 <value>5</value>
             </setting>
             <setting name="EnableOnEventBackup" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="MaxBackups" serializeAs="String">
                 <value>10</value>
@@ -29,7 +29,7 @@
                 <value>0</value>
             </setting>
             <setting name="LastUpdated" serializeAs="String">
-                <value />
+                <value/>
             </setting>
         </IronmanSaveBackup.Properties.Settings>
     </userSettings>
